--- a/less/styles.less
+++ b/less/styles.less
@@ -20,6 +20,7 @@ a {
 
 header {
 	position:fixed;
+	z-index:1;
 
 	top:0;
 	bottom:0;
@@ -116,5 +117,26 @@ header {
 
 	h1 {
 		font-size:18px;
+	}
+}
+
+.options-menu {
+	position:fixed;
+
+	bottom:1em;
+	left:0;
+	right:0;
+
+	text-align:center;
+	line-height: 2em;
+
+	a {
+		display:inline-block;
+		border-left:1px solid fade(#888, 50%);
+		padding: 0 1em;
+
+		&:first-child {
+			border-left:0 none;
+		}
 	}
 }
